--- a/portada/index.html
+++ b/portada/index.html
@@ -54,6 +54,11 @@
         </div>
     </main>
 
+   <!-- borrar luego-->
+    <section>
+        <p>cambio para probar github</p>
+    </section>
+
     <footer>
         <ul class="terms">
             <li>Términos legales y cookies</li>
