--- a/game/game.html
+++ b/game/game.html
@@ -11,56 +11,25 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Irish+Grover&family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap"
         rel="stylesheet">
+        <link rel="stylesheet" href="style2.css">
 </head>
 
 <body>
     <header>
+        <nav>
+            <a href="#" class="btn-arrow">
+                <img src="../assets/icons/arrow.png" width="50px" alt="arrow">
+            </a>
+        </nav>
         <h1>Trileros</h1>
     </header>
-    <nav>
-        <a href="#">Home</a>
-    </nav>
+
     <main>
-        <div>
-            <button class="button-red">Choose your cup</button>
-        </div>
-
-        <div class="button-container" id="button1">
-            <button>
-                <div class="image-container">
-                    <img src="../assets/images/cup1.png" alt="Cup1">
-                </div>
-            </button>
-        </div>
-
-        <div class="button-container" id="button1">
-            <button>
-                <div class="image-container">
-                    <img src="../assets/images/cup2.png" alt="Cup2">
-                </div>
-            </button>
-        </div>
-
-        <div class="button-container" id="button1">
-            <button>
-                <div class="image-container">
-                    <img src="../assets/images/cup3.png" alt="Cup1">
-                </div>
-            </button>
-        </div>
-
-        <div>
-            <button class="button-red">PLAY</button>
+       
+        <div class="image-container">
+            <img src="../assets/images/cup3.png" alt="Cup1">
         </div>
     </main>
-
-    <footer>
-        <ul class="terms">
-            <li>Términos legales y cookies</li>
-            <li>Contacto</li>
-            <li>&copy; Copyright</li>
-        </ul>
-    </footer>
 
 </body>
 
