--- a/game/game.html
+++ b/game/game.html
@@ -20,6 +20,9 @@
             <a href="#" class="btn-arrow">
                 <img src="../assets/icons/arrow.png" width="50px" alt="arrow">
             </a>
+            <button class="balloon">
+                <img src="../assets/icons/ballon.png">
+            </button>
         </nav>
         <h1>Trileros</h1>
     </header>
