cambio de color del titulo y stylo body

--- a/front/index.html
+++ b/front/index.html
@@ -23,10 +23,10 @@
         </div>
     </nav>
 </header>
-<div class="image-container">
+<div class="image-globo">
     <a href="#" class="btn-ballon">
         <img src="../assets/icons/ballon.png" alt="Balloon icon">
-        <span class="text-overlay">HELP</span>
+        
      </a>
  </div>
     <main>
