--- a/front/index.html
+++ b/front/index.html
@@ -23,17 +23,18 @@
         </div>
     </nav>
 </header>
-<div class="image-globo">
+<!--<div class="image-globo">
     <a href="#" class="btn-ballon">
         <img src="../assets/icons/ballon.png" alt="Balloon icon">
         
      </a>
- </div>
+ </div>-->
     <main>
         
         <div>
             <button class="button-red"><p>Choose your cup</p></button>
         </div>
+
         <div class="container">
         <div class="button-container" id="button1">
             <button>
@@ -59,14 +60,14 @@
             </button>
         </div>
 
-        <div class="container">
+        <div class="play">
             <button class="button-red" onclick="window.location.href = 'game.html'">PLAY</button>
         </div>
     </div>
     </main>
 
     <footer>
-        <div class="container">
+        <div class="footer">
         <ul class="terms">
             <li>Términos legales y cookies</li>
             <li>Contacto</li>
