--- a/front/index.html
+++ b/front/index.html
@@ -24,37 +24,36 @@
     </nav>
 </div>
     <main>
-        <div class="container">
-            <button class="button-red">Choose your cup</button>
+        <div>
+            <button class="button-red1">Choose your cup</button>
         </div>
 
-        <div class="button-container" id="button1">
+        <div class="button-cup" id="button1">
             <button>
                 <div class="image-container">
-                    <img src="../assets/images/cup1.png" alt="Cup1">
+                    <img src="" alt="Cup1">
                 </div>
             </button>
         </div>
 
-        <div class="button-container" id="button2">
+        <div class="button-cup" id="button2">
             <button>
                 <div class="image-container">
-                    <img src="../assets/images/cup2.png" alt="Cup2">
+                    <img src="" alt="Cup2">
                 </div>
             </button>
         </div>
 
-        <div class="button-container" id="button3">
+        <div class="button-cup" id="button3">
             <button>
                 <div class="image-container">
-                    <img src="../assets/images/cup3.png" alt="Cup3">
+                    <img src="" alt="Cup3">
                 </div>
             </button>
         </div>
 
-        <div class="container">
-            <button class="button-red" onclick="window.location.href = 'game.html'">PLAY</button>
-        </div>
+            <button class="button-red2" onclick="window.location.href = 'game.html'">PLAY</button>
+   
     </main>
 
     <footer>
@@ -66,8 +65,6 @@
         </ul>
     </div>
     </footer>
-
-    <script src="animation.js"></script>
 
 </body>
 
