Diseño movil terminado

--- a/game/game.html
+++ b/game/game.html
@@ -13,15 +13,17 @@
         rel="stylesheet">
         <link rel="stylesheet" href="style2.css">
 </head>
-
 <body>
     <div class="container-general">
-        <div class="image-arrow"> 
+        <header>
+            <div class="image-arrow"> 
             <a href="#" class="btn-arrow">
                 <img id="imagen-arrow" src="../assets/icons/arrow.png" alt="arrow">
             </a>
-        </div>
-        <header>
+            </div>
+            <div class="container-hourglass">
+                    <img id="imagen-hourglass" src="../assets/icons/hourglass.png" alt="hourglass">
+            </div>
             <div class="container-head">
                 <div class="container-ballon-1">
                     <a href="#" class="btn-score">    
@@ -38,10 +40,7 @@
                     <span class="text-overlay-2">HELP</span>
                     </a>
                 </div>
-        </div>
-        <div class="container-hourglass">
-                    <img id="imagen-hourglass" src="../assets/icons/hourglass.png" alt="hourglass">
-        </div>
+         </div>
         </header>
         <main>
             <div class="container-main">
@@ -58,6 +57,7 @@
                 </div>
                 <div class="container-down">
                     <div class="reset-button">
+                        <button id="reset" type="reset">RESET</button>
                     </div>
                     <div class="play-button">
                         <img id="imagen-play" src="../assets/icons/play.png" alt="imagen-play">
