--- a/front/index.html
+++ b/front/index.html
@@ -56,9 +56,10 @@
             </button>
         </div>
     </div>
-        <div>
+        <section class="container-song">
             <button class="button-play"><p class="play">PLAY</p></button>
-        </div>
+            <button class="image-sound"><img src="../assets/icons/sound.png " width="75" height="75" alt="incono-sonido"></button>
+        </section>
     </main>
  
 
