Finalizada parte del Front

--- a/front/index.html
+++ b/front/index.html
@@ -16,44 +16,48 @@
 <body>
     <header>
         <div class="container">
-        <h1>Trileros</h1>
+            <div class="container-ballon-1">   
+                    <img id="image-ballon" src="../assets/icons/ballon.png" alt="Balloon icon">
+                    <span class="home-text">Home</span> 
+                </a> 
+            </div>
+        <h1 class="title">TRILEROS</h1>
     </div>
     <div class="container"></div>
-    <nav>
-        <a href="#">Home</a>
-    </nav>
 </div>
-    <main>
+</header>
+
+    <main class="allblocks">
         <div>
             <button class="button-red1">Choose your cup</button>
         </div>
 
-        <div class="button-cup" id="button1">
             <button>
                 <div class="image-container">
-                    <img src="" alt="Cup1">
+                    <img src="../assets/images/cup1.png" alt="Cup1">
+                </div>
+            </button>
+
+            <button>
+                <div class="image-container">
+                    <img src="../assets/images/cup2.png" alt="Cup2">
                 </div>
             </button>
         </div>
 
-        <div class="button-cup" id="button2">
             <button>
                 <div class="image-container">
-                    <img src="" alt="Cup2">
+                    <img src="../assets/images/cup3.png" alt="Cup3">
                 </div>
             </button>
         </div>
-
-        <div class="button-cup" id="button3">
-            <button>
-                <div class="image-container">
-                    <img src="" alt="Cup3">
-                </div>
-            </button>
-        </div>
-
+        <div class="lower">
             <button class="button-red2" onclick="window.location.href = 'game.html'">PLAY</button>
-   
+            <div class="sound-button">
+                <img id="imagen-button" src="../assets/icons/sound.png" alt="sound-button">
+            </div>
+        </div>
+        
     </main>
 
     <footer>
