--- a/front/index.html
+++ b/front/index.html
@@ -28,9 +28,11 @@
 </header>
 
     <main class="allblocks">
-        <div>
+       <div>
             <button class="button-red1">Choose your cup</button>
         </div>
+
+        <div class="cups_mobile">
 
             <button>
                 <div class="image-container">
@@ -50,7 +52,18 @@
                     <img src="../assets/images/cup3.png" alt="Cup3">
                 </div>
             </button>
+              </div>
+         </div>
+
+        
+         <div class="cups_desktop">
+            <div class="rectangle">
+                <img class="element" src="../assets/images/cup1.png" alt="Cup1">
+                <img class="element" src="../assets/images/cup2.png" alt="Cup2">
+                <img class="element" src="../assets/images/cup3.png" alt="Cup3">
+            </div>
         </div>
+
         <div class="lower">
             <button class="button-red2" onclick="window.location.href = 'game.html'">PLAY</button>
             <div class="sound-button">
