últimos cambios desktop front

--- a/front/index.html
+++ b/front/index.html
@@ -29,25 +29,24 @@
 
     <main class="allblocks">
        <div>
-            <button class="button-red1">Choose your cup</button>
+            <button class="red_choose">Choose your cup</button>
         </div>
 
         <div class="cups_mobile">
-
-            <button>
+            <button class="circus">
                 <div class="image-container">
                     <img src="../assets/images/cup1.png" alt="Cup1">
                 </div>
             </button>
 
-            <button>
+            <button class="circus">
                 <div class="image-container">
                     <img src="../assets/images/cup2.png" alt="Cup2">
                 </div>
             </button>
         </div>
 
-            <button>
+            <button class="circus">
                 <div class="image-container">
                     <img src="../assets/images/cup3.png" alt="Cup3">
                 </div>
@@ -55,7 +54,6 @@
               </div>
          </div>
 
-        
          <div class="cups_desktop">
             <div class="rectangle">
                 <img class="element" src="../assets/images/cup1.png" alt="Cup1">
@@ -65,7 +63,7 @@
         </div>
 
         <div class="lower">
-            <button class="button-red2" onclick="window.location.href = 'game.html'">PLAY</button>
+            <button class="red_play" onclick="window.location.href = 'game.html'">PLAY</button>
             <div class="sound-button">
                 <img id="imagen-button" src="../assets/icons/sound.png" alt="sound-button">
             </div>
