cambiado reloj de arena al header

--- a/game/game.html
+++ b/game/game.html
@@ -21,14 +21,12 @@
                 <img id="imagen-arrow" src="../assets/icons/arrow.png" alt="arrow">
             </a>
             </div>
-            <div class="container-hourglass">
-                    <img id="imagen-hourglass" src="../assets/icons/hourglass.png" alt="hourglass">
-            </div>
+            
             <div class="container-head">
                 <div class="container-ballon-1">
-                    <a href="#" class="btn-score">    
-                        <img id="image-ballon" src="../assets/icons/ballon.png" alt="Balloon icon">
-                        <span class="text-overlay-1">SCORE</span>
+                    <a href="#" class="btn-ballon">
+                    <img id="imagen-ballon-1" src="../assets/icons/ballon.png"  alt="Balloon-icon">
+                    <span class="text-overlay-1">SCORE</span>
                     </a>
                 </div>
                 <div>
@@ -40,6 +38,9 @@
                     <span class="text-overlay-2">HELP</span>
                     </a>
                 </div>
+                <div class="container-hourglass">
+                    <img id="imagen-hourglass" src="../assets/icons/hourglass.png" alt="hourglass">
+            </div>
          </div>
         </header>
         <main>
