reloj-arena cambiado

--- a/game/game.html
+++ b/game/game.html
@@ -38,18 +38,19 @@
                     <span class="text-overlay-2">HELP</span>
                     </a>
                 </div>
-                <div class="container-hourglass">
-                    <img id="imagen-hourglass" src="../assets/icons/hourglass.png" alt="hourglass">
-            </div>
+                
          </div>
         </header>
         <main>
+            <div class="container-hourglass">
+                <img id="imagen-hourglass" src="../assets/icons/hourglass.png" alt="hourglass">
+        </div>
             <div class="container-main">
                 <div class="container-cups">
                     <div class="cup-1">
                         <img id="imagen-cup-3" src="../assets/images/cup3.png" alt="cup3">
                     </div>
-                    <div class="cup2">
+                    <div class="cup-2">
                         <img id="imagen-cup-3"src="../assets/images/cup3.png" alt="cup3">
                     </div>
                     <div class="cup3">
@@ -58,7 +59,7 @@
                 </div>
                 <div class="container-down">
                     <div class="reset-button">
-                        <button id="reset" type="reset">RESET</button>
+                        <button id="reset" type="button">RESET</button>
                     </div>
                     <div class="play-button">
                         <img id="imagen-play" src="../assets/icons/play.png" alt="imagen-play">
