--- a/front/index.html
+++ b/front/index.html
@@ -18,7 +18,7 @@
         <div class="container">
             <div class="container-ballon-1">   
                     <img id="image-ballon" src="../assets/icons/ballon.png" alt="Balloon icon">
-                    <span class="home-text">Home</span> 
+                    <span class="home-text">HOME</span> 
                 </a> 
             </div>
         <h1 class="title">TRILEROS</h1>
@@ -32,7 +32,7 @@
             <button class="red_choose">Choose your cup</button>
         </div>
 
-        <div class="cups_mobile">
+        <div class="cups-mobile">
             <button class="circus">
                 <div class="image-container">
                     <img src="../assets/images/cup1.png" alt="Cup1">
@@ -44,22 +44,13 @@
                     <img src="../assets/images/cup2.png" alt="Cup2">
                 </div>
             </button>
-        </div>
+        
 
             <button class="circus">
                 <div class="image-container">
                     <img src="../assets/images/cup3.png" alt="Cup3">
                 </div>
             </button>
-              </div>
-         </div>
-
-         <div class="cups_desktop">
-            <div class="rectangle">
-                <img class="element" src="../assets/images/cup1.png" alt="Cup1">
-                <img class="element" src="../assets/images/cup2.png" alt="Cup2">
-                <img class="element" src="../assets/images/cup3.png" alt="Cup3">
-            </div>
         </div>
 
         <div class="lower">
@@ -74,8 +65,8 @@
     <footer>
         <div class="container">
         <ul class="terms">
-            <li>Términos legales y cookies</li>
-            <li>Contacto</li>
+            <li>Legal terms and cookies</li>
+            <li>Contact</li>
             <li>&copy; Copyright</li>
         </ul>
     </div>
