--- a/game/game.html
+++ b/game/game.html
@@ -47,22 +47,25 @@
                     <img id="imagen-hourglass" src="../assets/icons/hourglass.png" alt="hourglass">
                </div>
                 <div class="container-cups">
-                    <div class="cup-1">
+                    <div class="cup">
                         <img id="imagen-cup-3" src="../assets/images/cup3.png" alt="cup3">
                     </div>
-                    <div class="cup2">
+                    <div class="cup">
                         <img id="imagen-cup-3"src="../assets/images/cup3.png" alt="cup3">
                     </div>
-                    <div class="cup3">
+                    <div class="cup">
                         <img id="imagen-cup-3" src="../assets/images/cup3.png" alt="cup3">
                     </div>
+                </div>
+                <div id="ball" class="little-ball">
                 </div>
                 <div class="container-down">
                     <div class="reset-button">
                         <button id="reset" type="reset">RESET</button>
                     </div>
                     <div class="play-button">
-                        <img id="imagen-play" src="../assets/icons/play.png" alt="imagen-play">
+                        <button id="start-button">
+                        </button>
                     </div>
                     <div class="sound-button">
                         <img id="imagen-button" src="../assets/icons/sound.png" alt="sound-button">
@@ -71,5 +74,6 @@
             </div>
         </main>
     </div>
+    <script src="gameFunction.js"></script>
 </body>
 </html>
