--- a/front/index.html
+++ b/front/index.html
@@ -64,6 +64,7 @@
 
         <div class="lower">
             <button class="red_play" onclick="window.location.href = 'game.html'">PLAY</button>
+            <button style="onclick" <audio src="c:\Users\Usuario\Downloads\circus-145017.mp3"></audio></button>
             <div class="sound-button">
                 <img id="imagen-button" src="../assets/icons/sound.png" alt="sound-button">
             </div>
