--- a/game/game.html
+++ b/game/game.html
@@ -39,24 +39,24 @@
                     </a>
                 </div>
                 <!-- Contenedor del modal -->
-                <div id="myModal" class="modal">
-                    <div class="modal-content">
-                        <span class="close">&times;</span>
-                        <h2>Instrucciones del Juego</h2>
-                        <p>1. Al iniciar el juego, verás tres vasos en la pantalla y una bolita que será colocada debajo de uno de los vasos.</p>
-                        <p>2. Observa cómo los vasos se mezclan.</p>
-                        <p>3. Una vez que los vasos se detengan, usa tu ratón para hacer clic en el vaso que crees que oculta la bolita.</p>
-                        <p>4. Si encuentras la bolita, ¡felicidades! Irás acumulando puntos, si no, inténtalo de nuevo.</p>
-                        <p>5. Puedes reiniciar el juego en cualquier momento para volver a intentarlo.</p>
-                    </div>
-                </div>
+            <div id="myModal" class="modal">
+            <div class="modal-content">
+                <span class="close">&times;</span>
+                <h2>Instrucciones del Juego</h2>
+                <p>1. Al iniciar el juego, verás tres vasos en la pantalla y una bolita que será colocada debajo de uno de los vasos.</p>
+                <p>2. Observa cómo oculta la bolita</p>
+                <p>3. Una vez que el contador se detengan, usa tu ratón para hacer clic en el vaso que crees que oculta la bolita.</p>
+                <p>4. Si encuentras la bolita, ¡felicidades! Irás acumulando puntos, si no, inténtalo de nuevo.</p>
+                <p>5. Puedes reiniciar el juego en cualquier momento para volver a intentarlo.</p>
+            </div>
+            </div>
                 
          </div>
         </header>
         <main>
             <div class="container-hourglass">
                 <div class="clock-and-countdown">
-                    <div id="countdown">10</div> <!-- Contador primero -->
+                    <div id="countdown">3</div>
                     <img id="imagen-hourglass" src="../assets/icons/hourglass.png" alt="hourglass"> <!-- Reloj después -->
                 </div>
             </div>
