--- a/front/index.html
+++ b/front/index.html
@@ -63,9 +63,8 @@
         </div>
 
         <div class="lower">
-            <button class="red_play" onclick="window.location.href = 'game.html'">PLAY</button>
-            <button style="onclick" <audio src="c:\Users\Usuario\Downloads\circus-145017.mp3"></audio></button>
-            <div class="sound-button">
+            <audio id="miAudio" src="../assets/music/inki-minki-tinki.mp3" loop></audio>
+            <div class="sound-button" onclick="toggleSound()">
                 <img id="imagen-button" src="../assets/icons/sound.png" alt="sound-button">
             </div>
         </div>
