cambio de destopk y agregar score

--- a/game/game.html
+++ b/game/game.html
@@ -26,7 +26,7 @@
                 <div class="container-ballon-1">
                     <a href="#" class="btn-ballon-1">
                     <img id="imagen-ballon-1" src="../assets/icons/ballon.png"  alt="Balloon-icon">
-                    <span class="text-overlay-1">SCORE</span>
+                    <span class="text-overlay-1"><div id="score">SCORE: 0</div></span>
                     </a>
                 </div>
                 <div>
