detalles finales del juego

--- a/game/game.html
+++ b/game/game.html
@@ -30,7 +30,7 @@
                 <h1 class="title">TRILEROS</h1>
             </div>
             <div class="container-ballon-2">
-                <a href="#" class="btn-ballon">
+                <a href="#" class="btn-ballon" id="btn-ballon-help">
                 <img id="imagen-ballon-2" src="../assets/icons/ballon.png"  alt="Balloon-icon">
                 <span class="text-overlay-2">HELP</span>
                 </a>
@@ -39,11 +39,11 @@
                 <div class="modal-content">
                     <span class="close">&times;</span>
                     <h2>Instrucciones del Juego</h2>
-                    <p>1. Al iniciar el juego, verás tres vasos en la pantalla y una bolita que será colocada debajo de uno de los vasos.</p>
-                    <p>2. Observa cómo los vasos se mezclan.</p>
-                    <p>3. Una vez que los vasos se detengan, usa tu ratón para hacer clic en el vaso que crees que oculta la bolita.</p>
-                    <p>4. Si encuentras la bolita, ¡felicidades! Irás acumulando puntos, si no, inténtalo de nuevo.</p>
-                    <p>5. Puedes reiniciar el juego en cualquier momento para volver a intentarlo.</p>
+                    <p>1. Para iniciar el juego presiona el boton de play.</p>
+                    <p>2. Se elevaran los vasos mostrando la bolita en su posicion inicial.</p>
+                    <p>3. Una vez que los vasos vuelvan a su lugar, usa tu ratón para hacer clic en el vaso que crees que oculta la bolita.</p>
+                    <p>4. Tienes 5 segundos para seleccionar un vaso, de no hacerlo habras perdido tu oportunidad y tendras que reiniciar.</p>
+                    <p>5. Puedes reiniciar el juego en cualquier momento para volver a intentarlo presionando el boton de RESET.</p>
                 </div>
             </div>
     </header>
@@ -57,14 +57,6 @@
             <div class="container-main">
                 <div class="container-cups">
                     <div class="cup">
-                        <div id="winner-alert" class="win-a">
-                            <span class="close-alert">&times;</span>
-                            <strong>Correcto! Encontraste la bolita.</strong>
-                        </div>
-                    <!-- <div id="lost-alet" class="lost-a">
-                            <span class="close-alert-two" onclick="">&times;</span>
-                            <strong>Incorrecto, Intenta de nuevo.</strong>
-                        </div> -->
                         <img id="imagen-cup-3" src="../assets/images/cup3.png" alt="cup3">
                     </div>
                     <div class="cup">
