Retoques finales terminados

--- a/front/index.html
+++ b/front/index.html
@@ -26,24 +26,24 @@
             <button class="red_choose">Choose your cup</button>
         </div>
         <div class="cups-mobile">
-            <button class="circus">
+            <button class="circus" onclick="window.location.href = '../game/game-yellow.html'">
                 <div class="image-container">
                     <img src="../assets/images/cup1.png" alt="Cup1">
                 </div>
             </button>
-            <button class="circus" id="button2">
+            <button class="circus" id="button2" onclick="window.location.href = '../game/game-blue.html'">
                 <div class="image-container">
                     <img src="../assets/images/cup2.png" alt="Cup2">
                 </div>
             </button>
-            <button class="circus" id="button3">
+            <button class="circus" id="button3" onclick="window.location.href = '../game/game-green.html'">
                 <div class="image-container">
                     <img src="../assets/images/cup3.png" alt="Cup3">
                 </div>
             </button>
         </div>
         <div class="lower">
-            <button class="red_play" onclick="window.location.href = 'game.html'">NEXT</button>
+            <!--button class="red_play" onclick="window.location.href = 'game.html'">NEXT</button-->
             <div class="sound-button">
                 <img id="imagen-button" src="../assets/icons/sound.png" alt="sound-button">
             </div>
