--- a/game/game.html
+++ b/game/game.html
@@ -51,8 +51,8 @@
     <main>
         <div class="container-hourglass">
             <div class="clock-and-countdown">
-                <div id="countdown">3</div> <!-- Contador primero -->
-                <img id="imagen-hourglass" src="../assets/icons/hourglass.png" alt="hourglass"> <!-- Reloj después -->
+                <div id="countdown">5</div> 
+                <img id="imagen-hourglass" src="../assets/icons/hourglass.png" alt="hourglass"> 
             </div>
             </div>
             <div class="container-main">
